--- a/PyCitySchools/PyCitySchools_final.ipynb
+++ b/PyCitySchools/PyCitySchools_final.ipynb
@@ -10,7 +10,7 @@
     "## Written Analysis\n",
     "Maths and reading scores from multiple schools in a local governement area were analysed to gain insight into potential factors that might influence academic scores. \n",
     "\n",
-    "It was found that students fared slightly better in maths than reading, and that independent schools, on average, had higher average maths and reading scores than government schools, which translated into more students passing the respective subject. Similarly, students from smaller schools had higher marks across the board compared to students from larger schools. However, the former and latter points are linked, as independent schools are often smaller than government schools. This phenomenon might be explained by a greater teacher to student ratio for independent schools, but teacher number and/or class size data was lacking from this analysis and therefore this hypothesis could not be tested.\n",
+    "It was found that students fared slightly better in maths than reading, and that independent schools, on average, had higher average maths and reading scores than government schools, which resulted in more students passing the respective subject. Similarly, students from smaller schools had higher marks across the board compared to students from larger schools. However, the former and latter points are linked, as independent schools are often smaller than government schools. This phenomenon might be explained by a greater teacher to student ratio for independent schools, but teacher number and/or class size data was lacking from this analysis and therefore this hypothesis could not be tested.\n",
     "\n",
     "-- Samuel Palframan, June 2023."
    ]
